<resources>
    <string name="app_name">Кухонный мастер</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="nav_main_string">Главная</string>
    <string name="nav_fridge_string">Холодильник</string>
    <string name="nav_recipes_string">Рецепты</string>
    <string name="nav_favorite_string">Избранное</string>
    <string name="nav_settings_string">Настройки</string>
    <string name="nav_user_string">Пользователь</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_introduce_recipe_string">Обзор рецепта</string>
    <string name="nav_add_products_string">Добавление продуктов</string>
    <string name="tab_title_recipes_all">Все рецепты</string>
    <string name="tab_title_recipe_available">Доступные</string>
</resources>